ADEN-11412 Fix styles related to collapsed-message

--- a/platforms/ucp-mobile/styles.scss
+++ b/platforms/ucp-mobile/styles.scss
@@ -269,7 +269,7 @@ body.bab-detected {
 	padding: 30px;
 	background-color: #520044;
 
-	.cta-message {
+	.cm-message {
 		color: #ffc500;
 		font-size: 36px;
 		font-weight: 900;
@@ -278,7 +278,7 @@ body.bab-detected {
 		text-transform: uppercase;
 	}
 
-	.cta-button {
+	.cm-button {
 		background-color: #ffc500;
 		color: #520044;
 		cursor: pointer;
